fix smiley z-index to show on top of map

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -233,7 +233,6 @@
     position: absolute;
     width: 100%;
     height: 100%;
-    z-index: 0;
 }
 
 #smiley {
@@ -241,7 +240,8 @@
     right: 0%;
     top: 2%;
     opacity: 0.7;
-    z-index: 1;
+    z-index: 999;
+    outline: 0;
 }
 
 .bearing {
